<resources>
    <string name="app_name">Contatos</string>
    <string name="zoom_in">Aproximar</string>
    <string name="zoom_out">Afastar</string>
    <string name="more">Adicionar</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>
    <string name="settings">Configurações</string>
    <string name="tela2">Tela2</string>
    <string name="tela1">Tela1</string>
    <string name="delete_action">Deletar</string>
    <string name="help_action">Ajuda</string>
    <string name="edit_action">Editar</string>
</resources>