<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_more"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom|withText"
        android:title="@string/more"
        >

        <menu>
            <item
                android:id="@+id/action_next"
                android:icon="@android:drawable/ic_media_next"
                android:title="@string/next"
                />

            <item
                android:id="@+id/action_previous"
                android:icon="@android:drawable/ic_media_previous"
                android:title="@string/previous"
                />
        </menu>

    </item>

    <item
        android:id="@+id/action_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom|withText"
        android:title="@string/edit_action"
        >

    </item>

    <item
        android:id="@+id/delete_action"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom|withText"
        android:title="@string/delete_action"
        >

    </item>


    <item
        android:id="@+id/action_help"
        app:showAsAction="never"
        android:title="@string/help_action"
        />
<!--
    <item
        android:id="@+id/act_settings"
        android:title="@string/settings"
        app:showAsAction="never"
        >

    </item>
-->
</menu>